--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us - Ormarich</title>
-    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="/css/main.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -98,8 +98,8 @@
       <div class="contact-grid">
         <div class="contact-info">
           <div class="info-item">
-            <i class="fas fa-map-marker-alt"></i>
-            <span>Ilica 242, Zagreb, Hrvatska</span>
+            <i class="fas fa-store"></i>
+            <span>Ormarich - Online Trgovina</span>
           </div>
           <div class="info-item">
             <i class="fas fa-phone"></i>
@@ -138,21 +138,6 @@
           </div>
           <button type="submit" class="btn btn-primary">Pošalji poruku</button>
         </form>
-      </div>
-
-      <div class="map-section">
-        <h2>Kako do nas</h2>
-        <div class="map-container">
-          <!-- Replace with actual map embed code -->
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2781.7974754342285!2d15.950936776926276!3d45.81327661126219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d6f0d1a8c9e9%3A0x3a9d3f0b7e4c4d1a!2sIlica%20242%2C%2010000%2C%20Zagreb!5e0!3m2!1sen!2shr!4v1629890183000!5m2!1sen!2shr"
-            width="100%"
-            height="450"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-          ></iframe>
-        </div>
       </div>
     </section>
 
@@ -201,6 +186,6 @@
       <div class="copyright">&copy; 2025 Ormarich. Sva prava pridržana.</div>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
