--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,10 @@
       <div class="logo">Ormarich</div>
       <nav id="mainNav">
         <ul>
-          <li><a href="#home" class="active">Početna</a></li>
+          <li><a href="/" class="active">Početna</a></li>
           <li><a href="#products">Proizvodi</a></li>
-          <li><a href="#about">O nama</a></li>
-          <li><a href="#contact">Kontakt</a></li>
+          <li><a href="/about.html">O nama</a></li>
+          <li><a href="/contact.html">Kontakt</a></li>
         </ul>
       </nav>
       <div class="header-right">
@@ -160,10 +160,10 @@
         <div class="footer-section">
           <h3 class="footer-title">Brzi Linkovi</h3>
           <ul class="footer-links">
-            <li><a href="#home">Početna</a></li>
+            <li><a href="/">Početna</a></li>
             <li><a href="#products">Proizvodi</a></li>
-            <li><a href="#about">O nama</a></li>
-            <li><a href="#contact">Kontakt</a></li>
+            <li><a href="/about.html">O nama</a></li>
+            <li><a href="/contact.html">Kontakt</a></li>
           </ul>
         </div>
         <div class="footer-section">
